<resources>
    <string name="app_name">Tutorial No 81</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome \nBack</string>
    <string name="background_color">background-color</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="logo">Logo</string>
    <string name="upgrade">To Get Unlimited\nUpgrade Your Account</string>
</resources>